--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -173,8 +173,8 @@ a {
 }
 
 a:hover {
-  color: #0056b3;
-  text-decoration: underline;
+  color: #E9CD9A;
+  text-decoration: none;
 }
 
 a:not([href]):not([tabindex]) {
@@ -1135,7 +1135,7 @@ pre code {
     flex-basis: 0;
     -ms-flex-positive: 1;
     flex-grow: 1;
-    max-width: 100%;
+    max-width: 1%;
   }
 
   .col-md-auto {
@@ -4461,6 +4461,7 @@ input[type="button"].btn-block {
 .nav-link:hover,
 .nav-link:focus {
   text-decoration: none;
+  color: #E9CD9A !important;
 }
 
 .nav-link.disabled {
@@ -4988,6 +4989,7 @@ input[type="button"].btn-block {
   background-clip: border-box;
   border: 1px solid rgba(0, 0, 0, 0.125);
   border-radius: 0.25rem;
+
 }
 
 .card>hr {
@@ -5009,24 +5011,26 @@ input[type="button"].btn-block {
   -ms-flex: 1 1 auto;
   flex: 1 1 auto;
   padding: 1.25rem;
-  background-color: rgb(52, 58, 64)
+  background-color: rgba(52, 58, 64, 0.8);
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
 }
 
 .card-title {
   margin-bottom: 0.75rem;
-  color:white;
+  color: white;
 
 }
 
 .card-subtitle {
   margin-top: -0.375rem;
   margin-bottom: 0;
-  color:white;
+
 }
 
 .card-text {
   margin-bottom: 0;
-  color:white;
+  color: white;
 }
 
 .card-link:hover {
@@ -5092,6 +5096,8 @@ input[type="button"].btn-block {
   width: 100%;
   border-top-left-radius: calc(0.25rem - 1px);
   border-top-right-radius: calc(0.25rem - 1px);
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
 }
 
 .card-img-bottom {
@@ -5407,8 +5413,8 @@ a.badge:focus {
 }
 
 .badge-primary {
-  color: #fff;
-  background-color: #007bff;
+  color: black;
+  background-color: #E9CD9A;
 }
 
 a.badge-primary:hover,
@@ -5549,7 +5555,7 @@ a.badge-dark.focus {
   border-radius: 0.3rem;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.8)
+  background-color: rgba(52, 58, 64, 0.8)
 }
 
 
@@ -5785,6 +5791,7 @@ a.badge-dark.focus {
   flex-direction: column;
   padding-left: 0;
   margin-bottom: 0;
+
 }
 
 .list-group-item-action {
@@ -5811,8 +5818,9 @@ a.badge-dark.focus {
   display: block;
   padding: 0.75rem 1.25rem;
   margin-bottom: -1px;
-  background-color: #fff;
+  background-color: rgba(52, 58, 64, 0.8);
   border: 1px solid rgba(0, 0, 0, 0.125);
+  color: #fff;
 }
 
 .list-group-item:first-child {
@@ -6017,14 +6025,15 @@ a.badge-dark.focus {
 }
 
 .list-group-item-success {
-  color: #155724;
-  background-color: #c3e6cb;
+  color: white;
+  background-color: rgba(52, 58, 64, 0.8);
 }
 
 .list-group-item-success.list-group-item-action:hover,
 .list-group-item-success.list-group-item-action:focus {
-  color: #155724;
+  color: #E9CD9A;
   background-color: #b1dfbb;
+
 }
 
 .list-group-item-success.list-group-item-action.active {
