finalisation restaurants.html

--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -4515,8 +4515,8 @@ input[type="button"].btn-block {
 .nav-pills .nav-link.active,
 .nav-pills .show>.nav-link {
   color: #fff;
-  background-color: #007bff;
-}
+  background-color: rgba(52, 58, 64, 0.8);
+} 
 
 .nav-fill .nav-item {
   -ms-flex: 1 1 auto;
@@ -4985,11 +4985,10 @@ input[type="button"].btn-block {
   flex-direction: column;
   min-width: 0;
   word-wrap: break-word;
-  background-color: #fff;
+  background-color: transparent;
   background-clip: border-box;
   border: 1px solid rgba(0, 0, 0, 0.125);
   border-radius: 0.25rem;
-
 }
 
 .card>hr {
