--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -68,6 +68,14 @@ footer {
     margin-top: 20px;
 }
 
+.color-social{
+    color: white !important;
+}
+
+.nav-link{
+    color: gray
+}
+
 /*Responsive Smartphone*/
 
 @media only screen and (max-width: 760px) {
