--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -68,19 +68,23 @@ footer {
     margin-top: 20px;
 }
 
-.color-social{
+.color-social {
     color: white !important;
 }
 
-.nav-link{
+.nav-link {
     color: gray
+}
+
+.mr-bot{
+    margin-bottom: 60px;
 }
 
 /*Responsive Smartphone*/
 
 @media only screen and (max-width: 760px) {
-    .gap {
-        padding-bottom: 20px;
+    .container {
+        width: 100%
     }
 
     footer {
@@ -91,9 +95,10 @@ footer {
 }
 
 @media only screen and (min-width: 760px) and (max-width: 1280px) {
-    .gap {
-        padding-bottom: 20px;
+    .container {
+        width: 100%
     }
+
 
     footer {
         position: absolute;
