--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,7 +5,7 @@ body {
     -o-background-size: cover;
     background-size: cover;
     font-family: 'Roboto', sans-serif !important;
-
+    height: 90vh;
 }
 
 .title {
@@ -32,7 +32,7 @@ footer {
     text-align: center;
     color: #fff;
     background-color: rgb(52, 58, 64);
-    position: fixed;
+    position: relative;
     bottom: 0;
     width: 100%;
     padding-top: 15px;
@@ -77,7 +77,7 @@ footer {
 }
 
 .mr-bot{
-    margin-bottom: 60px;
+    margin-bottom: 10px;
 }
 
 /*Responsive Smartphone*/
@@ -101,7 +101,7 @@ footer {
 
 
     footer {
-        position: absolute;
+        position: relative;
         padding-bottom: 1px;
     }
 
