--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,5 @@
 body {
-    background: url('/assets/img/main-background.jpg') no-repeat center center fixed;
+    background: url('../img/main-background.jpg') no-repeat center center fixed !important;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -32,7 +32,7 @@ footer {
     text-align: center;
     color: #fff;
     background-color: rgb(52, 58, 64);
-    position: relative;
+    position: fixed;
     bottom: 0;
     width: 100%;
     padding-top: 15px;
@@ -48,7 +48,8 @@ footer {
 }
 
 .marg {
-    margin-top: -15px
+    margin-top: -15px;
+    margin-bottom: 30px;
 }
 
 .footer-font {
@@ -82,7 +83,7 @@ footer {
 
 /*Responsive Smartphone*/
 
-@media only screen and (max-width: 760px) {
+@media only screen and (min-width:320px) and (max-width: 760px) {
     .container {
         width: 100%
     }
@@ -101,7 +102,7 @@ footer {
 
 
     footer {
-        position: relative;
+        position: absolute;
         padding-bottom: 1px;
     }
 
