--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -92,7 +92,9 @@ footer {
         position: relative;
         padding-bottom: 1px;
     }
-
+    .jumbotron-fluid {
+        width: 93% !important;
+    }
 }
 
 @media only screen and (min-width: 760px) and (max-width: 1280px) {
